# Renderer_MiASGK

./: .gitignore  CMakeLists.txt  Color.cpp  Color.h  ColorBuffer.cpp  ColorBuffer.h  Entity.cpp  Entity.h  Face.cpp  Face.h  Light.cpp  Light.h  LowPoly1.tga  Math.cpp  Math.h  ModelLoader.cpp  ModelLoader.h  Point3.cpp  Point3.h  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h  Vector2.h  Vector3.cpp  Vector3.h  main.cpp  render.tga
